--- a/package.json
+++ b/package.json
@@ -27,5 +27,17 @@
   "bugs": {
     "url": "https://github.com/peterbartha/cooperatio/issues"
   },
-  "homepage": "https://github.com/peterbartha/cooperatio#readme"
+  "homepage": "https://github.com/peterbartha/cooperatio#readme",
+  "devDependencies": {
+    "@types/codemirror": "0.0.56",
+    "@types/deep-equal": "^1.0.1",
+    "@types/ws": "^5.1.0",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-typescript2": "^0.13.0",
+    "typescript": "^2.8.3"
+  },
+  "dependencies": {
+    "deep-equal": "^1.0.1"
+  }
 }
