--- a/package.json
+++ b/package.json
@@ -32,9 +32,13 @@
     "@types/codemirror": "0.0.56",
     "@types/deep-equal": "^1.0.1",
     "@types/ws": "^5.1.0",
+    "chai": "^4.1.2",
+    "mocha": "^5.1.1",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-typescript2": "^0.13.0",
+    "source-map-support": "^0.5.5",
+    "ts-node": "^6.0.3",
     "typescript": "^2.8.3"
   },
   "dependencies": {
