--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Real-time collaborative JSON and plain-text editing with Operational Transformation in TypeScript.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register ./test/**/*.spec.ts"
   },
   "repository": {
     "type": "git",
@@ -29,8 +29,10 @@
   },
   "homepage": "https://github.com/peterbartha/cooperatio#readme",
   "devDependencies": {
+    "@types/chai": "^4.1.3",
     "@types/codemirror": "0.0.56",
     "@types/deep-equal": "^1.0.1",
+    "@types/mocha": "^5.2.0",
     "@types/ws": "^5.1.0",
     "chai": "^4.1.2",
     "mocha": "^5.1.1",
