--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Real-time collaborative JSON and plain-text editing with Operational Transformation in TypeScript.",
   "main": "index.js",
   "scripts": {
+    "clean": "trash build",
+    "build": "run-s clean && run-p build:*",
+    "build:main": "tsc -p tsconfig.json",
+    "build:module": "tsc -p tsconfig.module.json",
     "test": "mocha -r ts-node/register ./test/**/*.spec.ts"
   },
   "repository": {
@@ -36,10 +40,12 @@
     "@types/ws": "^5.1.0",
     "chai": "^4.1.2",
     "mocha": "^5.1.1",
+    "npm-run-all": "^4.1.3",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-typescript2": "^0.13.0",
     "source-map-support": "^0.5.5",
+    "trash-cli": "^1.4.0",
     "ts-node": "^6.0.3",
     "typescript": "^2.8.3"
   },
